fixed spacing

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -674,7 +674,7 @@ background-image: linear-gradient(242deg, #1dc5f5, #3765ba);
 /* ===== Features CSS ===== */
 .ud-features {
   padding-top: 120px;
-  padding-bottom: 90px;
+  /* padding-bottom: 90px; */
   color: white;
 }
 
@@ -798,7 +798,7 @@ background-image: linear-gradient(242deg, #1dc5f5, #3765ba);  opacity: 0.2;
 
 /* ===== About CSS ===== */
 .ud-about {
-  padding: 120px 0;
+  padding: 80px 0;
 }
 
 @media (max-width: 767px) {
